@@ -1,4 +1,5 @@
 2007-08-05 Maximilien Cuony
+	* Sign&Crypt implemented.
 	* Added Sign&Crypt to menu, editor, cgpg and cgpglin. [Todo: cgmail and cwin]
 
 2007-07-08  Maximilien Cuony
